# luci2

luci2/: Makefile
luci2/htdocs/: luci2.html
luci2/htdocs/luci2/: jquery-ui-1.10.3.custom.js  luci2.js
luci2/htdocs/luci2/bootstrap/: cascade.css
luci2/htdocs/luci2/css/: luci2.css
luci2/htdocs/luci2/proto/: 6in4.js  static.js
luci2/htdocs/luci2/template/: network.diagnostics.htm  status.syslog.htm  system.cron.htm  system.software.htm  system.startup.htm  system.upgrade.htm
luci2/htdocs/luci2/view/: network.diagnostics.js  network.hosts.js  network.interfaces.js  network.routes.js  network.switch.js  status.dmesg.js  status.overview.js  status.processes.js  status.routes.js  status.syslog.js  system.admin.js  system.cron.js  system.leds.js  system.routes.js  system.software.js  system.startup.js  system.system.js  system.upgrade.js  system.users.js
luci2/share/acl.d/: luci2.json  main.json
luci2/share/menu.d/: network.json  system.json
luci2/src/io/: CMakeLists.txt  login.c  login.h  main.c
luci2/src/rpcd/: CMakeLists.txt  luci2.c
